# llvm-mos-sdk

./: CMakeLists.txt
cmake/: bin-to-c.cmake
examples/sfc/: CMakeLists.txt  bin-to-c.cmake  hello-sfc.S  hello-sfc.cpp
examples/spc700/: CMakeLists.txt  brr-enc.c  hello-spc700.cpp
mos-platform/: CMakeLists.txt  mos-common.cfg  mos-sfc.cfg  mos-spc700.cfg
mos-platform/common/lib/: call_indir.S
mos-platform/sfc/include/: CMakeLists.txt  sfc.h
mos-platform/sfc/ldscripts/: link.ld
mos-platform/sfc/lib/: CMakeLists.txt  crt0.S  putchar.c
mos-platform/spc700/include/: CMakeLists.txt  spc.h
mos-platform/spc700/ldscripts/: link.ld
mos-platform/spc700/lib/: CMakeLists.txt  abort.c  crt0.S
utils/sim/: fake6502.c  mos-sim.c
